cleaned up generators and parsers